experiments/mkdocs/minimal-custom-theme/custom_theme/css/index.css
* {
  box-sizing: border-box;
  padding: 0px;
  margin: 0px;
  background-color: rgb(0, 0, 0, 0);
  color: whitesmoke;
  font-family: "Consolas", "Courier New", "Lucida Console", "Menlo", "Monaco",
    "Liberation Mono", "Ubuntu Mono", "DejaVu Sans Mono", "Roboto Mono",
    "Noto Mono", "Inconsolata", "Source Code Pro", "SF Mono", monospace;
  line-height: 1.1;
  font-size: 18px;
  font-style: normal;
}

html,
body {
  background-color: rgb(18, 18, 18);
  padding: 10px;
}

body {
  margin: 0 auto;
  max-width: 800px;
  justify-content: center;
  align-items: center;
}

h1 {
  margin-top: 10px;
  margin-bottom: 20px;
  font-size: 30px;
}
h2 {
  margin-top: 10px;
  margin-bottom: 15px;
  font-size: 26px;
}
h3,
h4,
h5,
h6 {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 22px;
}

blockquote {
  padding: 10px;
  margin: 10px;
  background-color: rgb(0, 41, 82);
}

blockquote p,
blockquote strong em,
blockquote p strong em {
  color: rgb(242, 255, 103);
}

ul {
  padding-left: 40px;
}

/* CODE */
pre {
  background-color: rgba(255, 255, 255, 0.152);
  padding: 10px;
  margin-top: 10px;
  margin-bottom: 10px;
}

code {
  background-color: rgba(20, 20, 20, 0);
}

.vscode-light .hljs-comment,
.vscode-light .hljs-quote,
.vscode-light .hljs-number,
.vscode-light .hljs-class,
.vscode-light .hljs-variable {
  background-color: rgba(0, 128, 0, 0);
  color: rgb(0, 138, 0);
}

